# zeke

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/hooks/: pre-push
.claude/rules/: python.md
.claude/skills/add-tests/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr-desc/: SKILL.md
.claude/skills/quality/: SKILL.md
.github/workflows/: ci.yml
docs/: zk-claude-initial-plan.md
examples/: config.toml
tests/: conftest.py  test_cli.py  test_config.py  test_ids.py  test_links.py  test_notes.py  test_search.py
zeke/: __init__.py  cli.py  config.py  ids.py  links.py  notes.py  search.py
